argo-cd/route-rg.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: kratos-reference-grant
  namespace: argo-cd
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    # gateway namespace
    namespace: envoy-gateway
  to:
  - group: ""
    kind: Service
