argo-cd/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argoevents-route
  namespace: default
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "argo-cd.hq.lightup.tw"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          namespace: argo-cd
          name: argo-cd-argocd-server
          port: 443
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
